objects/Facility_Checklist__c.object
<CustomObject>
    <description>Facility Checklist object</description>
    <fields>
        <fullName>Air_fan_louvers_in_place_and_functioning__c</fullName>
        <description>Field in the Air section of Facility Checklist object</description>
        <label>Air fan louvers in place &amp; functioning?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>All_In_All_Out_Operation__c</fullName>
        <description>Field in the General section of the Facility Checklist object</description>
        <label>All In, All Out Operation?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_Brooder_Heaters_Used__c</fullName>
        <description>Field in the General section of the Facility Checklist object</description>
        <label>Are Brooder Heaters Used?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_Hi_Lows_being_Monitored__c</fullName>
        <description>Field in the General section of the Facility Checklist object</description>
        <label>Are Hi/Lows being Monitored?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_Mats_Used__c</fullName>
        <description>Field in the General section of the Facility Checklist object</description>
        <label>Are Mats Used?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_Pigs_Piling__c</fullName>
        <description>Field in the General section of the Facility Checklist object</description>
        <label>Are Pigs Piling?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Piling</fullName>
                </value>
                <value>
                    <fullName>1 - 1/2 Deep</fullName>
                </value>
                <value>
                    <fullName>2 Deep</fullName>
                </value>
                <value>
                    <fullName>More</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_air_inlets_adjusted_properly__c</fullName>
        <description>Field in the Air section of the Facility Checklist object</description>
        <label>Are air inlets adjusted properly?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs attention</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_door_cards_being_filled_out_daily__c</fullName>
        <description>Field in the General section of the Facility Checklist object</description>
        <label>Are door cards being filled out daily?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_exhaust_fans_functioning_Are_blades__c</fullName>
        <description>Field in the Air section of the Facility Checklist object</description>
        <label>Exhaust fans functioning? Blades clean?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_fall_back_pigs_sorted_out__c</fullName>
        <description>Field in the General section of the Facility Checklist object</description>
        <label>Are fall back pigs sorted out?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_individual_treated_pigs_being_marked__c</fullName>
        <description>Field in the General section of the Facility Checklist object</description>
        <label>Are individual treated pigs marked?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_pigs_active__c</fullName>
        <description>Field in the General section of the Facility Checklist object</description>
        <label>Are pigs active?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_pigs_eating__c</fullName>
        <description>Field in the Feed section of the Facility Checklist object</description>
        <label>Are pigs eating?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_pit_levels_restricting__c</fullName>
        <description>Field in the Air section of the Facility Checklist object</description>
        <inlineHelpText>Are pit levels restricting pit fan minimum ventilation?</inlineHelpText>
        <label>Are pit levels restricting ventilation?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_waterers_functioning_properly__c</fullName>
        <description>Field in the Water section of the Facility Checklist object</description>
        <label>Are waterers functioning properly?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Before_new_group_entered_did_you_check__c</fullName>
        <label>Before new group entered, did you check:</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bowls_Used_in_Phase_1__c</fullName>
        <description>Field in the Feed section of the Facility Checklist object</description>
        <label>Bowls Used in Phase 1?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ceiling_Inlets__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field in the General section of the Facility Checklist object</description>
        <label>Ceiling Inlets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to capture Primary Contact</description>
        <label>Contact 1</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.Producer_Facility__c</field>
                <operation>equals</operation>
                <valueField>Contact.Account.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Facility Checklists</relationshipLabel>
        <relationshipName>Facility_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to capture an additional contact.</description>
        <label>Contact 2</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.Producer_Facility__c</field>
                <operation>equals</operation>
                <valueField>Contact.Account.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Facility Checklists (Contact 2)</relationshipLabel>
        <relationshipName>Facility_Checklists1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to capture a third contact related to the Facility Checklist.</description>
        <label>Contact 3</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.Producer_Facility__c</field>
                <operation>equals</operation>
                <valueField>Contact.Account.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Facility Checklists (Contact 3)</relationshipLabel>
        <relationshipName>Facility_Checklists2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Feed_Phase__c</fullName>
        <description>Field in the Feed section of the Facility Checklist object</description>
        <label>Current Feed Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phase 1</fullName>
                </value>
                <value>
                    <fullName>Phase 2</fullName>
                </value>
                <value>
                    <fullName>Phase 3+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Pig_Weight_Estimate__c</fullName>
        <description>Field in the General section of the Facility Checklist object</description>
        <label>Current Pig Weight Estimate</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Ration__c</fullName>
        <description>Field in the Feed section of the Facility Checklist object</description>
        <label>Current Ration</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Curtains_Doors_For_Air_Leakage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field in the General section of the Facility Checklist object</description>
        <label>Curtains &amp; Doors For Air Leakage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_or_Budget_Fed__c</fullName>
        <description>Field in the Feed section of the Facility Checklist object</description>
        <label>Days or Budget Fed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decreased_Feed_Cost__c</fullName>
        <description>Field in the General section of the Facility Checklist object</description>
        <label>Decreased Feed Cost</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decreased_Mortality__c</fullName>
        <description>Field in the General section of the Facility Checklist object</description>
        <label>Decreased Mortality</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_you_see_foam_activity_in_the_pit__c</fullName>
        <label>Do you see foam activity in the pit?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Electrolytes_Used__c</fullName>
        <description>Field in the Feed section of the Facility Checklist object</description>
        <label>Electrolytes Used?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Environment_clean_dry_free_of_drafts__c</fullName>
        <description>Field in the General section of the Facility Checklist object</description>
        <label>Environment clean, dry &amp; free of drafts?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Environmental_temperature_correct__c</fullName>
        <description>Field in the Air section of the Facility Checklist object</description>
        <label>Environmental temperature correct?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Fallouts__c</fullName>
        <description>Field in the General section of the Facility Checklist object</description>
        <label>Estimated % Fallouts</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>1-3%</fullName>
                </value>
                <value>
                    <fullName>4-6%</fullName>
                </value>
                <value>
                    <fullName>7-10%</fullName>
                </value>
                <value>
                    <fullName>10% plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Facility_Type__c</fullName>
        <description>Field in the General section of the Facility Checklist object</description>
        <label>Facility Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nursery</fullName>
                </value>
                <value>
                    <fullName>Wean to Finish</fullName>
                </value>
                <value>
                    <fullName>Grow/Fin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fan_Louvers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field in the General section of the Facility Checklist object</description>
        <label>Fan Louvers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feeder_type__c</fullName>
        <description>Field in the Feed section of the Facility Checklist object</description>
        <label>Feeder type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Wet/Dry</fullName>
                </value>
                <value>
                    <fullName>Tube</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feeders_in_good_condition_adjusted__c</fullName>
        <description>Field in the Feed section of the Facility Checklist object</description>
        <label>Feeders in good condition &amp; adjusted?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_biosecurity_quality__c</fullName>
        <description>Field in the General section of the Facility Checklist object</description>
        <label>General biosecurity quality?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Top-Notch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Head_Pen__c</fullName>
        <description>Field in the General section of the Facility Checklist object</description>
        <label>Head/Pen</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Heat_Lamps_Used__c</fullName>
        <description>Field in the General section of the Facility Checklist object</description>
        <label>Heat Lamps Used?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hi_lo_thermometers_to_monitor_temp__c</fullName>
        <description>Field in the Air section of the Facility Checklist object</description>
        <label>Hi-lo thermometers to monitor temp?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>High_quality_feed_storage__c</fullName>
        <description>Field in the Feed section of the Facility Checklist object</description>
        <inlineHelpText>e.g. free of gases, moisture, rodents, etc.</inlineHelpText>
        <label>High quality feed storage?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_many_head_per_cup_or_nipple__c</fullName>
        <description>Field in the Water section of the Facility Checklist object</description>
        <label>How many head per cup or nipple?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;10</fullName>
                </value>
                <value>
                    <fullName>10-20</fullName>
                </value>
                <value>
                    <fullName>&gt;20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Humidity_evaluation__c</fullName>
        <description>Field in the Air section of the Facility Checklist object</description>
        <label>Humidity evaluation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Room environment is dusty</fullName>
                </value>
                <value>
                    <fullName>Dust puffs off gate when rubbed</fullName>
                </value>
                <value>
                    <fullName>Dust sticks on gates</fullName>
                </value>
                <value>
                    <fullName>Floor is damp</fullName>
                </value>
                <value>
                    <fullName>Pigs are dirty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Humidity_sensors_used__c</fullName>
        <description>Field in the Air section of the Facility Checklist object</description>
        <label>Humidity sensors used?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Improved_Feed_Efficiency__c</fullName>
        <description>Field in the General section of the Facility Checklist object</description>
        <label>Improved Feed Efficiency</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Increased_ADG__c</fullName>
        <description>Field in the General section of the Facility Checklist object</description>
        <label>Increased ADG</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Increased_Early_Feed_Intake__c</fullName>
        <description>Field in the General section of the Facility Checklist object</description>
        <label>Increased Early Feed Intake</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insulation_quantity_quality_adequate__c</fullName>
        <description>Field in the Air section of the Facility Checklist object</description>
        <label>Insulation quantity &amp; quality adequate?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Pig_Space_Adequate__c</fullName>
        <label>Is Pig Space Adequate?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_humidity_in_room_at_correct_level__c</fullName>
        <description>Field in the Air section of the Facility Checklist object</description>
        <label>Is humidity in room at correct level?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Too low</fullName>
                </value>
                <value>
                    <fullName>Okay</fullName>
                </value>
                <value>
                    <fullName>Too high</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_the_water_pressure_appropriate__c</fullName>
        <description>Field in the Water section of the Facility Checklist object</description>
        <label>Is the water pressure appropriate?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mat_fed__c</fullName>
        <description>Field in the Feed section of the Facility Checklist object</description>
        <label>Mat fed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meal_or_Pelleted_Diet_for_Phase_1_2__c</fullName>
        <description>Field in the Feed section of the Facility Checklist object</description>
        <label>Meal or Pelleted Diet for Phase 1 &amp; 2?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Meal</fullName>
                </value>
                <value>
                    <fullName>Pellet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minimum_Ventilation_Fans_Functionality__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field in the Air section of the Facility Checklist object</description>
        <label>Minimum Ventilation Fans &amp; Functionality</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mortality_Rate__c</fullName>
        <description>Field in the General section of the Facility Checklist object</description>
        <label>Mortality Rate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>1-2%</fullName>
                </value>
                <value>
                    <fullName>2-4%</fullName>
                </value>
                <value>
                    <fullName>5%+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Observations__c</fullName>
        <description>Field in the General section of the Facility Checklist object</description>
        <label>Other Observations (General)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Observations_air__c</fullName>
        <description>Field in the Air section of the Facility Checklist object</description>
        <label>Other Observations (Air)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Observations_feed__c</fullName>
        <description>Field in the Feed section of the Facility Checklist object</description>
        <label>Other Observations (Feed)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Observations_water__c</fullName>
        <description>Field in the Water section of the Facility Checklist object</description>
        <label>Other Observations (Water)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outside_Soffit_Openings__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field in the General section of the Facility Checklist object</description>
        <label>Outside Soffit Openings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pen_size_Cups_per_pen__c</fullName>
        <description>Field in the Water section of the Facility Checklist object</description>
        <label>Pen size - Cups per pen?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pig_Uniformity_per_Pen__c</fullName>
        <description>Field in the General section of the Facility Checklist object</description>
        <label>Pig Uniformity per Pen</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Uniform</fullName>
                </value>
                <value>
                    <fullName>Fairly Uniform</fullName>
                </value>
                <value>
                    <fullName>Mostly Uniform</fullName>
                </value>
                <value>
                    <fullName>Very Uniform</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Portion_of_Group_Sneezing_Coughing__c</fullName>
        <description>Field in the General section of the Facility Checklist object</description>
        <label>Portion of Group Sneezing/Coughing?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Occasional</fullName>
                </value>
                <value>
                    <fullName>Dry Cough</fullName>
                </value>
                <value>
                    <fullName>Productive Cough</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Producer_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to denote the Facility that the checklist should be associated with.</description>
        <label>Producer Facility</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Facility Checklists</relationshipLabel>
        <relationshipName>Facility_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Producer_Priorities__c</fullName>
        <label>Producer Priorities</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ration_medicated__c</fullName>
        <description>Field in the Feed section of the Facility Checklist object</description>
        <label>Ration medicated?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>